--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@ We install small-scale tidal turbines along coastlines and use that power to sup
 Our website shares the journey of our initiative, from the engineering behind our turbine systems to the environmental impact we aim to make. We believe sustainability should be both accessible and community-driven.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+						
 							</article>
 
 						<!-- Posts -->
@@ -76,7 +74,7 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										on Tofino Coasts</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/tofino.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Our pilot turbines are now fully operational near Tofino, marking the first step in bringing clean, ocean-powered charging to BC’s coastal waters.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -88,7 +86,8 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										Generate Electricity</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/turbine.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Learn how underwater currents power our tidal turbines and how that energy flows to electric boat charging docks across the coast.
+</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -100,7 +99,7 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										Workers Employed</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/impact2.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>We’ve partnered with local Nations to offer green tech jobs and training, supporting community growth and climate action together.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -112,7 +111,7 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										Vancouver</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/whalewatch.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Together with WhaleWatch Vancouver, we’re promoting sustainable ecotourism while protecting ocean habitats and marine species.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -124,7 +123,7 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										with Help from Local Community</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/construction.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>After storm damage, volunteers and local engineers came together to repair one of our turbines—showing the strength of shared stewardship.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -136,7 +135,7 @@ Our website shares the journey of our initiative, from the engineering behind ou
 										Around Charging Stations</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/whales.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A pod of orcas was recently seen near our installations, offering hope that cleaner, quieter coastlines help marine life thrive!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
