--- a/howitworks.html
+++ b/howitworks.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<h1>How ElectroTide Works</h1>
 									<p>ElectroTide makes it easy for boat owners to access clean, renewable energy right at the dock. Our system combines compact tidal turbines with smart, accessible charging infrastructure to simplify electric boating and reduce environmental impact.</p>
-									
+									<div class="image main"><img src="images/3dmodel.jpg" alt="" /></div>
 								</header>
 								<h2>From Tides to Tech</h2>
 									<p>Everything begins with the ocean. Our floating horizontal-axis underwater turbines are placed just off the coast in areas with consistent tidal movement. These turbines spin with the natural current, converting kinetic energy from the tides into clean electricity 24/7.</p>
